[tm821/#221] Add timestamps to histories and add get_text_by_id endpoint
