# backend/openapi.json
@@ -966,7 +966,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/Body_register_user"
+                "$ref": "#/components/schemas/UserRegister"
               }
             }
           }
@@ -1024,7 +1024,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/Body_login_user"
+                "$ref": "#/components/schemas/UserLogin"
               }
             }
           }
@@ -1099,7 +1099,66 @@
         }
       }
     },
-    "/game/texts/next": {
+    "/game/texts/{text_id}": {
+      "get": {
+        "tags": [
+          "game"
+        ],
+        "summary": "Get Text By Id",
+        "description": "Gets the text with the given id.",
+        "operationId": "get_text_by_id",
+        "parameters": [
+          {
+            "name": "text_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "title": "Text Id"
+            }
+          },
+          {
+            "name": "access_token",
+            "in": "cookie",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "type": "string"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "title": "Access Token"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/TextWithQuestions"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/game/next-text": {
       "get": {
         "tags": [
           "game"
@@ -1108,6 +1167,15 @@
         "description": "Gets the next text that the user has not attempted before.",
         "operationId": "get_next_text",
         "parameters": [
+          {
+            "name": "difficulty",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "title": "Difficulty"
+            }
+          },
           {
             "name": "is_summary",
             "in": "query",
@@ -1158,7 +1226,7 @@
         }
       }
     },
-    "/game/texts/{text_id}/questions/next": {
+    "/game/texts/{text_id}/next-questions": {
       "get": {
         "tags": [
           "game"
@@ -1364,24 +1432,6 @@
         ],
         "title": "Answer"
       },
-      "Body_login_user": {
-        "properties": {
-          "username": {
-            "type": "string",
-            "title": "Username"
-          },
-          "password": {
-            "type": "string",
-            "title": "Password"
-          }
-        },
-        "type": "object",
-        "required": [
-          "username",
-          "password"
-        ],
-        "title": "Body_login_user"
-      },
       "Body_post_answers": {
         "properties": {
           "answers": {
@@ -1426,29 +1476,6 @@
         ],
         "title": "Body_post_answers"
       },
-      "Body_register_user": {
-        "properties": {
-          "username": {
-            "type": "string",
-            "title": "Username"
-          },
-          "email": {
-            "type": "string",
-            "title": "Email"
-          },
-          "password": {
-            "type": "string",
-            "title": "Password"
-          }
-        },
-        "type": "object",
-        "required": [
-          "username",
-          "email",
-          "password"
-        ],
-        "title": "Body_register_user"
-      },
       "HTTPValidationError": {
         "properties": {
           "detail": {
@@ -1467,6 +1494,11 @@
           "text_id": {
             "type": "string",
             "title": "Text Id"
+          },
+          "date": {
+            "type": "string",
+            "format": "date-time",
+            "title": "Date"
           },
           "game_mode": {
             "type": "string",
@@ -1514,6 +1546,7 @@
         "type": "object",
         "required": [
           "text_id",
+          "date",
           "game_mode",
           "game_submode",
           "difficulty",
@@ -1531,6 +1564,11 @@
           "text_id": {
             "type": "string",
             "title": "Text Id"
+          },
+          "date": {
+            "type": "string",
+            "format": "date-time",
+            "title": "Date"
           },
           "game_mode": {
             "type": "string",
@@ -1582,6 +1620,7 @@
         "type": "object",
         "required": [
           "text_id",
+          "date",
           "game_mode",
           "game_submode",
           "difficulty",
@@ -2322,6 +2361,53 @@
           "total_texts"
         ],
         "title": "UserAvailableTexts"
+      },
+      "UserLogin": {
+        "properties": {
+          "username": {
+            "type": "string",
+            "title": "Username"
+          },
+          "password": {
+            "type": "string",
+            "title": "Password"
+          }
+        },
+        "type": "object",
+        "required": [
+          "username",
+          "password"
+        ],
+        "title": "UserLogin"
+      },
+      "UserRegister": {
+        "properties": {
+          "username": {
+            "type": "string",
+            "maxLength": 30,
+            "minLength": 3,
+            "pattern": "[a-zA-Z0-9_]+",
+            "title": "Username"
+          },
+          "email": {
+            "type": "string",
+            "pattern": "^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$",
+            "title": "Email"
+          },
+          "password": {
+            "type": "string",
+            "maxLength": 30,
+            "minLength": 8,
+            "title": "Password"
+          }
+        },
+        "type": "object",
+        "required": [
+          "username",
+          "email",
+          "password"
+        ],
+        "title": "UserRegister"
       },
       "UserStatistics": {
         "properties": {
